# NSULabs

./: .gitignore  LICENSE  README.md
2 cource/OPP/lab3/: Makefile
2 cource/OS/lab2/: hello.c  hello_nosyscall.c  test.S
2 cource/os/lab2/: hello1  hello_syscall.c  hello_with_write.c  syscall
2 course/EVM/lab1-lab2/: report_lab2.docx  ~$port_lab2.docx  ~WRL2190.tmp  Диаграмма в lab2.xlsx
2 course/EVM/lab3/: Help information for lab3 EVMPU.docx  lab3.txt  x84_64_assembler.txt  x84_64_assembler.txt.bak
2 course/EVM/lab4/: helper.docx  helper_For_arm  helper_For_arm.bak  report_lab4.docx  Листинг на O0.txt  Листинг на O0.txt.bak  Листинг на O1.txt  Листинг на O1.txt.bak
2 course/EVM/lab5/: WebCambyOpencCV.cpp
2 course/EVM/lab6/: lab6.cpp  lab6_p3.cpp
2 course/EVM/lab7/: blas.c  first.c  report_lab7.docx  simd.c
2 course/EVM/lab8/: lab8.xlsx  main.cpp  main2.cpp  (+2 more)
2 course/OOP/C++/BigInt/: BigInt.cpp  BigInt.h  CMakeLists.txt  test.cpp
2 course/OS/: README.md
2 course/matstat/: main.py
3 course/comp_math/: README.md
3 course/database/: Readme.md  cookbook.odb  пояснительная_записка.odt
3 course/deep-machine-learning/: lab1.ipynb  lab2.ipynb  lab3.ipynb  lab4_1.ipynb  lab4_2.ipynb  lab6 copy.ipynb  lab6.ipynb
3 course/mppsd/: Readme.md  bash-script  git-bot  git-bot.sh  mail.sh
3 course/mtk/: Readme.md
3 course/networks/: README.md
3 course/os/: REAMDE.md
4 course/c-sharp/: HackathonProblem.rar
OPP/lab1/: Makefile  main.c
OPP/lab2/: var2.c
lab1/: var1.c  var2.c
lab2/: main.c  schedule.c  var1.c
lab3/: Makefile
lab3/src/: main.c
(+511 files in other folders)
